--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <header>
+    <% if user_signed_in?%>
+      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to '新規登録', new_user_registration_path %>
+      <%= link_to 'ログイン', user_session_path, method: :post%>
+    <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
