有名人ログイン機能の実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
+    <meta charset="utf-8">
     <title>Myapp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,13 +12,27 @@
 
   <body>
     <header>
+    <h1>一般ユーザーの方はこちら</h1>
     <% if user_signed_in?%>
       <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to '新規登録', new_user_registration_path %>
       <%= link_to 'ログイン', user_session_path, method: :post%>
     <% end %>
+
+    <h1>有名人の方はこちら</h1>
+    <% if @current_celeb %>
+      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'ログイン', new_second_celebs_path %>
+    <% end %>
     </header>
+
+    <main>
+    </main>
+
+    <footer>
+    </footer>
     <%= yield %>
   </body>
 </html>
