有名人コメント投稿機能の実装

--- a/app/views/celebs/show.html.erb
+++ b/app/views/celebs/show.html.erb
@@ -1,3 +1,3 @@
 <% @user_comments.each do |comment|%>
-<%= comment.content%>
+<%=link_to comment.user.nickname, room_path(comment.room_id) %>
 <% end %>
