--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -114,7 +114,7 @@
 .famous-index{
   padding: 5vh 0 5vh 3vw;
   color: white;
-  background-color: #3bb1fa;
+  background-color: #97d5fc;
 }
 
 .famous-index>.title{
@@ -132,6 +132,7 @@
 .celebs-lists>.list{
   display: flex;
   margin-right: 4vw;
+  margin-bottom: 5vh;
 }
 
 .celeb-contents{
