--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/second-header" %>
+
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
   <div class='form-header'>
@@ -11,7 +13,7 @@
       <label class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
+    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) Sunny太郎", maxlength:"40" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -50,7 +52,7 @@
     </div>
     <div class='input-name-wrap'>
       <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
-      <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
+      <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 太郎" %>
     </div>
   </div>
   <div class="form-group">
@@ -60,7 +62,7 @@
     </div>
     <div class='input-name-wrap'>
       <%= f.text_area :last_name_katakana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :first_name_katakana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+      <%= f.text_area :first_name_katakana, class:"input-name", id:"first-name-kana", placeholder:"例) タロウ" %>
     </div>
   </div>
   <div class="form-group">
@@ -96,6 +98,8 @@
   <p class='register-info'>本人情報の登録について</p>
 </div>
 <% end %>
+
+<%= render "shared/second-footer" %>
 
 
 
