有名人詳細画面の装飾

--- a/app/views/celebs/show.html.erb
+++ b/app/views/celebs/show.html.erb
@@ -1,3 +1,24 @@
-<% @user_comments.each do |comment|%>
-<%=link_to comment.user.nickname, room_path(comment.room_id) %>
-<% end %>
+<%= render "shared/header" %>
+
+<div class='celeb-show-main'>
+  <div class='celeb-show-content'>
+    <div class='celeb-profile'>
+      <%= image_tag @celeb.image, class: "celeb-image" %>
+      <h2 class='celeb-show-name'>
+        <%= @celeb.name %>
+      </h2>
+    </div>
+  </div>
+  <div class="user-comments">
+    <% @user_comments.each do |comment|%>
+      <ul class='user-comment-list'> 
+        <%=link_to comment.user.nickname, room_path(comment.room_id) %>
+        <li class='user-comment'>
+          <%=comment.content%>
+        </li>
+      </ul>  
+    <% end %>
+  </div>
+</div>
+
+<%= render "shared/second-footer" %>
