チャット画面の装飾

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,16 +1,34 @@
-<% if user_signed_in? %>
-<h2>投稿する（一般ユーザー）</h2>
-<%= form_with model: @user_comment, url:room_user_comments_path(@room), local: true do |f| %>
+<%= render "shared/header"%>
 
-<%= f.text_area :content%>
-<%= f.submit '投稿する'%>
-<% end %>
-<% else %>
-<h2>投稿する（有名人）</h2>
-<%= form_with model: @celeb_comment, url:room_celeb_comments_path(@room), local: true do |f| %>
+<div class='room-contents'>
+  <div class='celeb-show-content'>
+    <div class='celeb-profile'>
+      <%= image_tag @room.celeb.image, class: "celeb-image" %>
+      <h2 class='celeb-show-name'>
+        <%= @room.celeb.name %>
+      </h2>
+    </div>
+  </div>
 
-<%= f.text_area :content%>
-<%= f.submit '投稿する'%>
-<% end %>
-<% end %>
+  <div class='cele'>
+
+  <div class=''>
+
+  <% if user_signed_in? %>
+    <h2>投稿する（一般ユーザー）</h2>
+    <%= form_with model: @user_comment, url:room_user_comments_path(@room), local: true do |f| %>
+      <%= f.text_area :content%>
+      <%= f.submit '投稿する'%>
+    <% end %>
+  <% else %>
+    <h2>投稿する（有名人）</h2>
+    <%= form_with model: @celeb_comment, url:room_celeb_comments_path(@room), local: true do |f| %>
+      <%= f.text_area :content%>
+      <%= f.submit '投稿する'%>
+    <% end %>
+  <% end %>
+
+</div>
+
+<%= render "shared/second-footer" %>
 
