--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -10,19 +10,18 @@
     </div>
   </div>
 
-  <div class='cele'>
 
-  <div class=''>
 
+  
   <% if user_signed_in? %>
     <h2>投稿する（一般ユーザー）</h2>
-    <%= form_with model: @user_comment, url:room_user_comments_path(@room), local: true do |f| %>
+    <%= form_with model: @message, url:room_messages_path(@room), local: true do |f| %>
       <%= f.text_area :content%>
       <%= f.submit '投稿する'%>
     <% end %>
   <% else %>
     <h2>投稿する（有名人）</h2>
-    <%= form_with model: @celeb_comment, url:room_celeb_comments_path(@room), local: true do |f| %>
+    <%= form_with model: @message, url:room_messages_path(@room), local: true do |f| %>
       <%= f.text_area :content%>
       <%= f.submit '投稿する'%>
     <% end %>
