--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -4,21 +4,18 @@
 
 .top-page-header {
   width: 100vw;
-  padding: 2vh 15vw;
+  padding: 0 15vw;
   display: flex;
   flex-direction: column;
 }
 
 .search-bar-contents{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
+  /* margin-left: 140px; */
 }
 
 .sunny-icon{
-  width: 10vw;
-  margin-right: 10vw;
-  
+  width: 16vw;
 }
 
 .search-form{
