エラーメッセージの表示

--- a/app/views/celebs/new_second.html.erb
+++ b/app/views/celebs/new_second.html.erb
@@ -9,9 +9,8 @@
     </h1>
   </div>
   <div class='login-flash-message'>
-    <%= flash[:notice] %>
-    <%= flash[:alert] %>
-  </div>
+    <%= notice %>
+  </div> 
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">メールアドレス</label>
