ユーザーの画像の登録

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,12 @@
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
+      <label class="form-text">プロフィール画像</label>
+    </div>
+    <%= f.file_field :image, id:"item-image" %>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
       <label class="form-text">メールアドレス</label>
       <span class="indispensable">必須</span>
     </div>
