--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,21 +5,25 @@
   <div class='nav'>
     <ul class='lists-left'>
     <% unless user_signed_in? %>
-      <h1>有名人の方はこちら</h1>
+      
       <% if @current_celeb %>
         <%= link_to 'ログアウト', celeb_path(@current_celeb), method: :delete,class:"login" %>
         <%= link_to 'マイページ', celeb_path(@current_celeb), class: "login" %>
       <% else  %> 
+        <h1>有名人の方はこちら</h1>
         <%= link_to 'ログイン', new_second_celebs_path,class:"login" %>
       <% end %>
     <% end %>
     </ul> 
     <ul class='lists-right'>
     <% unless @current_celeb %>
-      <h1>一般ユーザーの方はこちら</h1>
+      
       <% if user_signed_in?%>
-        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+        <%= "こんにちは、#{current_user.nickname}さん"%>
+        <%= link_to 'マイページ', user_path(current_user.id) , class:"login" %>
+        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete , class:"login" %>
       <% else %>
+        <h1>一般ユーザーの方はこちら</h1>
         <%= link_to '新規登録', new_user_registration_path , class:"login" %>
         <%= link_to 'ログイン', user_session_path, method: :post, class: "login" %>
       <% end %>
