--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -78,3 +78,37 @@
   height: 0;
 }
 
+.celeb-show-main{
+  width: 100%;
+  background-color: #66cfff;
+  background-size: cover;
+  padding: 5vh 20vw;
+  height: 500px;
+}
+
+.celeb-show-content{
+  margin-bottom: 50px;
+}
+
+.celeb-profile{
+  display: flex;
+}
+
+.celeb-show-name{
+  margin-left: 30px;
+  font-size: 30px;
+  padding-top: 30px;
+}
+
+.user-comment-list{
+  margin: 0 0 5vh 5vw;
+}
+
+.user-comment{
+  display: flex;
+  align-items: center;
+}
+
+.chat-room-name{
+  margin: 0 10px;
+}
