--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -155,4 +155,12 @@
   border: 3px solid white;
 }
 
+.celeb-name{
+  color: black;
+  text-decoration: none;
+}
 
+.celeb-name:hover{
+  color: blue;
+  text-decoration: underline;
+}
