--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <script type="text/javascript" src="https://js.pay.jp/v1/"></script>
+    <script src="js/celeb-index.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all'%>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application'%>
   </head>
 
   <body>
