--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -115,6 +115,8 @@
   padding: 5vh 0 5vh 3vw;
   color: white;
   background-color: #97d5fc;
+  overflow-y: scroll;
+  height: 500px;
 }
 
 .famous-index>.title{
