--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -72,6 +72,9 @@
         <div class="faceicon1">
           <%= image_tag @room.user.image, class: 'img1' %>
           <h2 class='name1'><%= @room.user.nickname %>さんとのトーク</h2>
+          <div class='block-btn'>
+            <%= link_to 'ブロック', room_blocks_path(@room), method: :post %>
+          </div>
         </div>
       </div>
     <% end %>
