--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -73,7 +73,7 @@
           <%= image_tag @room.user.image, class: 'img1' %>
           <h2 class='name1'><%= @room.user.nickname %>さんとのトーク</h2>
           <div class='block-btn'>
-            <%= link_to 'ブロック', room_blocks_path(@room), method: :post %>
+            <%= link_to 'ブロック', room_blocks_path(@room), method: :post , class: 'chat-room-name'%>
           </div>
         </div>
       </div>
