--- a/app/assets/stylesheets/room/show.scss
+++ b/app/assets/stylesheets/room/show.scss
@@ -37,7 +37,6 @@
 
 .faceicon1{
   display: flex;
-  // justify-content: center;
   align-items: center;
   margin: 0 auto;
   width: 50vw;
@@ -216,6 +215,7 @@
   background: #30e852;
   font-size: 15px;
   text-align: left;
+  cursor: pointer;
 }
 
 .mycomment p:after{
@@ -228,6 +228,29 @@
   -webkit-transform: rotate(-35deg);
   transform: rotate(-35deg);
 }
+
+.destroy-btn{
+  position: absolute;
+  z-index: 10;
+  margin-left: 500px;
+}
+
+.destroy-btn p{
+  position: relative;
+  width: 100px;
+  height: 35px;
+  background-color: #d3d3d3;
+  border-radius: 12px;
+  z-index: 10;
+  text-align: center;
+  line-height: 35px;
+}
+.destroy-btn p:after{
+  content: "";
+  position: absolute;
+
+}
+
 
 
 .send-form{
