--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <script src="js/celeb-index.js"></script>
     <%= stylesheet_link_tag 'application', media: 'all'%>
     <%= javascript_pack_tag 'application'%>
+    <script src="https://js.pay.jp/" , type="text/javascript"></script>
   </head>
 
   <body>
